# onion

./: Cargo.toml  README.md  input.txt
.github/workflows/: rust.yml
src/: ascii85.rs  main.rs
src/layers/: layer1.rs  layer2.rs  layer3.rs  layer4.rs  layer5.rs  mod.rs
test/: encoded.txt
