[package]
name = "onion"
version = "0.1.0"
authors = ["Ryan Mulcahy <mulchy81@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
openssl = "0.10.29" # needed for unwrap key, there is probably a better crate that is not just calling openssl